More possible fixes to that terrible white space :(

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     color: #2c2c2c;
@@ -7,8 +11,6 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
-
-    overflow-x: hidden;
 }
 
 h2 {
